--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1136,6 +1136,10 @@ h5 {
   word-break: break-all;
 }
 
+.post__author {
+  margin-bottom: 10rem;
+}
+
 .post_container {
   margin-top: 10rem;
   margin-bottom: 2rem;
@@ -1180,8 +1184,233 @@ h5 {
   word-break: break-all;
 }
 
+.category {
+  padding: 1rem;
+  font-size: 1.4rem;
+}
+
+.post__summary_title_a {
+  font-size: 1.8rem;
+}
+
 body {
   background-color: #24262b;
   color: white;
+}
+
+.big-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 3.6rem;
+  margin: 30px 10px;
+}
+
+.big-title i {
+  margin: 0rem 1rem;
+}
+
+.filter {
+  width: 80%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.filter a {
+  font-size: 1.8rem;
+}
+
+.filter form {
+  border: 1px solid whitesmoke;
+  margin: 10px 0px;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: space-around;
+      -ms-flex-align: space-around;
+          align-items: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.filter form .datetime {
+  color: white;
+  font-size: 1.8rem;
+}
+
+.filter form .datetime input {
+  margin-left: 18%;
+}
+
+.filter form input,
+.filter form select,
+.filter form label {
+  font-size: 1.8rem;
+}
+
+.filter form input input,
+.filter form select input,
+.filter form label input {
+  min-width: 50%;
+}
+
+.filter form label {
+  min-width: 20rem;
+}
+
+.filter form input,
+.filter form select {
+  min-width: 50%;
+}
+
+.filter form button {
+  margin-top: 1rem;
+  font-size: 1.8rem;
+}
+
+.comment-form {
+  min-width: 80%;
+}
+
+.comment-form * {
+  margin-top: 2rem;
+}
+
+.comment-form textarea {
+  padding: 2rem;
+  width: 100%;
+  height: 15rem;
+}
+
+.comment-form button {
+  font-size: 1.8rem;
+}
+
+.commentary-section {
+  border: 1px solid white;
+  padding: 2rem;
+}
+
+.comment-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.comment-header p,
+.comment-header a {
+  color: cyan;
+}
+
+.comment-header .comment-upload-date {
+  color: silver;
+  margin-left: 2rem;
+  font-size: 1.4rem;
+}
+
+.comments-title {
+  margin-top: 3rem;
+  background-color: grey;
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+
+.author-icon {
+  margin-right: 2rem;
+}
+
+.delete-message {
+  height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.delete-message a,
+.delete-message button {
+  font-size: 1.4rem;
+  padding: 1rem 4rem;
+  margin: 1rem 3rem;
+}
+
+.mod-post-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 2rem;
+  border: 1px solid yellow;
+  padding: 5rem;
+}
+
+.mod-post-header p {
+  font-size: 1.6rem;
+}
+
+.mod-post-header .mod-button {
+  font-size: 1.6rem;
+  margin: 0rem 2rem;
+}
+
+.no-comments {
+  font-size: 2rem;
+  color: grey;
 }
 /*# sourceMappingURL=main.css.map */
