--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -26,8 +26,7 @@
         <link rel="stylesheet"
               href="{% static "./styles/main.css" %}">
         <link rel="icon"
-              href="{% static "./img/logo.svg" %}">
-        {% block css %}
+              href="{% static "./img/logo.svg" %}"> {% block css %}
         {% endblock css %}
     </head>
 
@@ -48,14 +47,13 @@
                     <li><a href="{% url 'register_user' %}">Register</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
 
-                    {% else %}
-                    {% if user.is_staff %}
+                    {% else %} {% if user.is_staff %}
                     <li>
                         <a href="{% url 'blog-post-create' %}"> Create post </a>
                     </li>
                     {% endif %}
                     <li>
-                        <a href="{% url 'blog-profile-detail' user.id %}">
+                        <a href="{% url 'blog-profile-detail' user.profile.id %}">
                             {{ user.username }}
                         </a>
                     </li>
