--- a/templates/blog/post-create.html
+++ b/templates/blog/post-create.html
@@ -4,8 +4,11 @@
 <link rel="stylesheet" href="{% static 'admin/css/widgets.css' %}" />
 
 {% endblock css %} {% block content %}
-<form method="POST">
-    {{ form.media }} {{ form.as_p }} {% csrf_token %}
-    <button type="submit" value="Submit">Post now!</button>
-</form>
+<h1 class="big-title">Create a post</h1>
+<div class="filter">
+    <form method="POST" enctype="multipart/form-data">
+        {{ form.media }} {{ form.as_p }} {% csrf_token %}
+        <button type="submit" value="Submit">Post now!</button>
+    </form>
+</div>
 {% endblock %}
