--- a/templates/blog/profile-detail.html
+++ b/templates/blog/profile-detail.html
@@ -1,9 +1,9 @@
 {% extends '../base/base.html' %} {% block content %}
 <div class="profile">
     {% if user.is_authenticated and user == profile.user %}
-    <a href="{% url 'blog-profile-update' profile.user.id %}"
-        >Edit your profile</a
-    >
+    <a href="{% url 'blog-profile-update' profile.id %}">Edit your profile</a>
+    {% elif user.is_staff%}
+    <a href="{% url 'blog-profile-update' profile.id %}">Edit this profile</a>
     {% endif %}
 
     <h2 class="post__title">{{ profile}}</h2>
