fix: styling css...

--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -16,5 +16,6 @@
 @import '4-layout/looking-for-form';
 @import '4-layout/gallery';
 @import '4-layout/post';
+@import '4-layout/profile';
 
 @import '5-pages/home';
