--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1193,6 +1193,73 @@ h5 {
   font-size: 1.8rem;
 }
 
+.profile_detail {
+  width: 80%;
+  margin: auto;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: auto;
+}
+
+.profile_detail .profile_detail_pic img {
+  max-width: 300px;
+  max-height: 300px;
+  min-width: 300px;
+  min-height: 300px;
+  margin-bottom: 4rem;
+}
+
+.profile_detail a,
+.profile_detail i {
+  color: white;
+  font-size: 1.8rem;
+  margin: 0rem 1rem;
+}
+
+.profile_detail .profile_row {
+  padding: 0.2rem 0rem;
+  width: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.profile_detail .profile_detail_bio {
+  margin-top: 5rem;
+}
+
+.profile_detail .profile_detail_user {
+  margin: 4rem 0rem;
+  font-size: 4rem;
+}
+
+.profile_detail .button_edit {
+  margin-top: 2rem;
+}
+
 body {
   background-color: #24262b;
   color: white;
