--- a/templates/blog/post-delete.html
+++ b/templates/blog/post-delete.html
@@ -8,7 +8,11 @@
             {{ object.author }} at {{ object.upload_date }}?
         </p>
 
-        <a href="{% url 'blog-home' %}" class="btn btn-secondary">NO</a>
+        <a
+            href="{% url 'blog-post-detail' object.id %}"
+            class="btn btn-secondary"
+            >NO</a
+        >
         <button class="btn btn-danger" type="submit">YES</button>
     </form>
 </div>
