fix: css almost there!

--- a/static/styles/5-pages/_home.scss
+++ b/static/styles/5-pages/_home.scss
@@ -54,6 +54,12 @@ body {
             font-size: 1.8rem;
         }
     }
+    p {
+        #id_cover,
+        #id_pic {
+            margin-left: 15rem;
+        }
+    }
 }
 
 .comment-form {
