--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -17,5 +17,6 @@
 @import '4-layout/gallery';
 @import '4-layout/post';
 @import '4-layout/profile';
+@import '4-layout/password-reset';
 
 @import '5-pages/home';
