--- a/templates/user/password-reset-complete.html
+++ b/templates/user/password-reset-complete.html
@@ -1,5 +1,8 @@
 {% extends '../base/base.html' %} {% block content %}
-
-<div>Your password has beeen set successfully</div>
-<a href="{% url 'login' %}"> Login here now</a>
+<div class="password-reset">
+    <h2>Your password has beeen set successfully</h2>
+    <a href="{% url 'login' %}" class="btn btn-primary btn-reset">
+        Login here now</a
+    >
+</div>
 {% endblock %}
