--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -4,7 +4,7 @@
     <form method="POST">
         <h2>Register form</h2>
         {% csrf_token %} {{ form}}
-        <button type="submit">GRABAR</button>
+        <button type="submit">Register!</button>
     </form>
 </div>
 
