--- a/templates/blog/post-create.html
+++ b/templates/blog/post-create.html
@@ -8,7 +8,9 @@
 <div class="filter">
     <form method="POST" enctype="multipart/form-data">
         {{ form.media }} {{ form.as_p }} {% csrf_token %}
-        <button type="submit" value="Submit">Post now!</button>
+        <button type="submit" value="Submit" class="btn btn-primary">
+            Post now!
+        </button>
     </form>
 </div>
 {% endblock %}
