--- a/templates/user/password-reset-confirm.html
+++ b/templates/user/password-reset-confirm.html
@@ -1,11 +1,15 @@
 {% extends '../base/base.html' %} {% block content %}
 
-<h1>Reset your password</h1>
+<div class="password-reset">
+    <h2>Reset your password</h2>
 
-<form action="." method="post">
-    {% csrf_token %} {{ form.as_p }}
+    <form action="."
+          method="post">
+        {% csrf_token %} {{ form.as_p }}
 
-    <p><input type="submit" value="Reset password" /></p>
-</form>
-
+        <p><input type="submit"
+                   value="Reset password"
+                   class="btn btn-primary btn-reset" /></p>
+    </form>
+</div>
 {% endblock %}
