--- a/templates/user/password-reset-done.html
+++ b/templates/user/password-reset-done.html
@@ -1,5 +1,6 @@
 {% extends '../base/base.html' %} {% block content %}
 
-<div>An email has been sent with instructions to reset your password</div>
-
+<div class="password-reset">
+    <h2>An email has been sent with instructions to reset your password</h2>
+</div>
 {% endblock %}
