--- a/templates/blog/post-search.html
+++ b/templates/blog/post-search.html
@@ -41,10 +41,10 @@
 
                 </div>
                 <div class='post_summary__content'>
-                        <div>{{post.category}}</div>
-                        <div>{{post.title}}</div>
-                        <a href="{% url 'blog-profile-detail' post.author.id %}">{{post.author}}</a>
-                        <p>{{ post.body|safe|striptags|truncatechars_html:"150" }}</p>
+                        <div class="badge bg-primary category">{{post.category}}</div>
+                        <div class="post__summary_title_a">{{post.title}}</div>
+                        <a href="{% url 'blog-profile-detail' post.author.id %}">By {{post.author}}</a>
+                        <p class="post__body">{{ post.body|safe|striptags|truncatechars_html:"150" }}</p>
                         <div>{{post.upload_date}}</div>
                         <div class="post_read_more"><a href="{% url 'blog-post-detail' post.id %}">Read more...</a>
                         </div>
