--- a/templates/user/list.html
+++ b/templates/user/list.html
@@ -1,11 +1,19 @@
 {% extends '../base/base.html' %} {% block content %} {% if object_list %}
-
-<div class="filter">
+<h2 class="big-title">User list</h2>
+<div class="filter"
+     style="height:80vh;">
     {% for user in object_list %}
-    <p>Username: {{ user.username }}</p>
-    <p>email: {{ user.email }}</p>
-    <button type="button"
-            class="btn btn-primary">See this profile</button>
+
+    <div class="user_list">
+        <div class="user_list_data">
+            <p>Username: {{ user.username }}</p>
+            <p>email: {{ user.email }}</p>
+        </div>
+        <div>
+            <a class="btn btn-primary"
+               href="{% url 'blog-profile-detail' user.profile.id %} ">See this profile</a>
+        </div>
+    </div>
 
     {% endfor %} {% else %}
     <h1>No users!</h1>
