feat: facebook login

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -55,11 +55,19 @@
                         <a href="{% url 'blog-post-create' %}"> Create post </a>
                     </li>
                     {% endif %}
+
                     <li>
+                        {% if user.profile %}
                         <a href="{% url 'blog-profile-detail' user.profile.id %}">
                             {{ user.username }}
                         </a>
+                        {% else %}
+                        <a href="{% url 'create-profile' %}">
+                            {{ user.username }}
+                        </a>
+                        {% endif %}
                     </li>
+
                     <li><a href="{% url 'logout' %}"> Logout </a></li>
 
                     {% endif %}
